<resources>
    <string name="app_name">My Application</string>

    <string name="activity_main">EzRecipe</string>
    <string name="activity_recipe">Create Recipe</string>

    <string name="action_settings">Settings</string>

    <string name="label_name">Recipe Name</string>


    <string name="error_permission" translatable="false">Permission denied</string>
    <string name="label_recipe_type">Recipe Types</string>
    <string name="label_recipe_image">Insert images to Recipes</string>
    <string name="label_hint_recipe_image">Tab and upload your recipe image(*)</string>


    <string name="label_recipe_ingredient">New Ingredient(*)</string>
    <string name="label_recipe_name">New Recipe(*)</string>
    <string name="label_recipe_steps">New Steps(*)</string>
    <string name="label_recipe_create">Create</string>
    <string name="error_pick_image_from_gallery">Unable to get the path. Try again!</string>
    <string name="error_image_load">Glide load image failed</string>
    <string name="error_require_ingredient">Please add new ingredient</string>
    <string name="error_require_step">Please add new ingredient</string>
    <string name="error_duplicate_ingredient">The ingredient have already existed</string>
    <string name="error_duplicate_step">The step have already existed</string>
    <string name="update_ingredient_successfully">Update ingredient successfully</string>
    <string name="update_step_successfully">Update step successfully</string>
    <string name="toolbar_title_create_recipe">Create New Recipe</string>
    <string name="error_fill_information">Please fill all information in form</string>
    <string name="new_recipe">New</string>
    <string name="save_recipe_successfully">Save recipe successfully</string>
    <string name="no_data">No Data</string>
    <string name="delete_recipe_successfully">Delete recipe successfully</string>
    <string name="all">All</string>
</resources>
